# turboagent

./: .gitignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  TurboAgent.docx  TurboAgent.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.py  status.md
.github/workflows/: ci.yml
docs/: conf.py  enterprise.rst  index.rst  installation.rst  quickstart.rst
docs/api/: agents.rst  backends.rst  quant.rst  server.rst  turboagent.rst
docs/guides/: cloud_deployment.rst  gaming_pc_agent.rst  multi_agent_swarm.rst  rag_pipeline.rst
examples/: 70b_gaming_pc_agent.py  cloud_api_client.py  multi_agent_swarm.py  rag_agent.py
examples/niah/: README.md  run_niah.py
marketplace/: README.md  __init__.py
marketplace/templates/: code_analyst.json  document_qa.json  research_swarm.json
tests/: conftest.py  debug_streaming_cache_type.py  test_agents.py  test_cli.py  test_enterprise.py  test_hardware.py  test_integration_kv_bridge.py  test_marketplace.py  test_quant.py  test_server.py  test_streaming_kv.py  test_streaming_stage1.py  test_utils.py  test_weight_quantization.py  verify_stage2_16k.py
turboagent/: __init__.py  cli.py  server.py  utils.py
turboagent/agents/: __init__.py  base.py  rag.py  swarm.py
turboagent/backends/: __init__.py  base.py  llama_cpp.py  torch.py  vllm.py
turboagent/enterprise/: __init__.py  audit.py  license.py  swarm.py
turboagent/hardware/: __init__.py  detector.py
turboagent/quant/: __init__.py  bitpack.py  streaming_kv.py  turboquant.py  validators.py
vastai/: README.md  setup.sh  test_70b_integration.py  test_long_context_niah.py  verify_option_c_16k.py
