[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboagent-ai"
version = "1.1.0"
description = "TurboQuant-powered agentic AI framework for long-context LLMs on consumer hardware"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "TurboAgent Contributors", email = "contrib@turboagent.to"}]
keywords = ["llm", "turboquant", "kv-cache", "agentic-ai", "local-inference", "rag"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.3.0"]
vllm = ["vllm>=0.7.0"]
torch = ["transformers>=4.40.0", "huggingface_hub>=0.23.0"]
native = ["turboquant-kv>=0.2.0"]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
enterprise = ["turboagent-enterprise>=0.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
docs = ["sphinx>=7.0", "furo>=2024.0"]

[project.urls]
Homepage = "https://github.com/TurboAgentAI/turboagent"
Documentation = "https://turboagent.to"
Repository = "https://github.com/TurboAgentAI/turboagent"
Issues = "https://github.com/TurboAgentAI/turboagent/issues"
Enterprise = "https://turboagent.to/enterprise"

[project.scripts]
turboagent = "turboagent.cli:main"

[tool.setuptools.packages.find]
include = ["turboagent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring a live LLM engine (deselect with '-m not integration')",
]
